--- a/.github/workflows/uncletopia.yaml
+++ b/.github/workflows/uncletopia.yaml
@@ -48,6 +48,11 @@ jobs:
           source("R/madness.R")
         shell: Rscript {0}
 
+      - name: MY Madness
+        run: |
+          source("R/madness2022_2.R")
+        shell: Rscript {0}
+
       - name: Commit files
         run: |
           git config --local user.email "actions@github.com"
